--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
+.idea/
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
@@ -224,4 +224,4 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
-
+schema.yml
