--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,8 @@ PyJWT==2.1.0
 pyparsing==2.4.7
 pyrsistent==0.17.3
 python-dateutil==2.8.1
+python-dotenv==0.18.0
+python-environ==0.4.54
 pytz==2021.1
 PyYAML==5.4.1
 requests==2.25.1
